--- a/tamilSchoolP/build.gradle
+++ b/tamilSchoolP/build.gradle
@@ -21,19 +21,30 @@ configurations {
 
 repositories {
 	mavenCentral()
+
+}
+dependencyManagement {
+	imports {
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2023.0.3'
+	}
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '3.3.3'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.postgresql:postgresql'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
+	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		implementation 'org.springframework.boot:spring-boot-starter-webflux'
+		implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+		implementation group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '3.3.3'
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+		compileOnly 'org.projectlombok:lombok'
+		runtimeOnly 'org.postgresql:postgresql'
+
+		annotationProcessor 'org.projectlombok:lombok'
+
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	}
+
+	tasks.named('test') {
+		useJUnitPlatform()
+	}
